다미 CRUD + 공구 참여 완성

--- a/marketTrio/src/main/resources/templates/thyme/banner.html
+++ b/marketTrio/src/main/resources/templates/thyme/banner.html
@@ -47,16 +47,15 @@
     <div class="header">
         <img id="logo" th:src="@{/images/logo.png}" />
         <div class="nav">
-            <a href="#" th:href="@{/used-market}">중고거래</a>
+            <a th:href="@{'/shPost/list'}">중고거래</a>
             <a href="#" th:href="@{/auction}">경매</a>
-            <a href="#" th:href="@{/group-buying}">공동구매</a>
+            <a th:href="@{'/groupBuy/list'}">공동구매</a>
         </div>
         <div class="auth">
             <a href="#" th:href="@{/login}">로그인</a>
             <a href="#" th:href="@{/signup}">회원가입</a>
             <a><img id="profile"  th:src="@{/images/profile.png}" /></a>
         </div>
-    </div>
     </div>
 </body>
 </html>
