--- a/marketTrio/src/main/resources/templates/thyme/myPage/mySalesList.html
+++ b/marketTrio/src/main/resources/templates/thyme/myPage/mySalesList.html
@@ -43,7 +43,14 @@ body {
 	margin: 0;
 	padding: 0;
 }
-
+.title {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            max-width: 150px; /* 적절한 너비를 설정하세요 */
+            display: inline-block;
+            vertical-align: bottom;
+        }
 .content {
 	margin-left: 220px;
 	padding: 20px;
