--- a/marketTrio/src/main/resources/templates/thyme/myPage/myPurchaseList.html
+++ b/marketTrio/src/main/resources/templates/thyme/myPage/myPurchaseList.html
@@ -43,7 +43,6 @@ body {
     margin: 0;
     padding: 0;
 }
-
 .content {
     margin-left: 220px;
     padding: 20px;
@@ -148,6 +147,15 @@ body {
     flex: 1;
     padding-left: 20px;
 }
+
+.title {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            max-width: 200px; /* 적절한 너비를 설정하세요 */
+            display: inline-block;
+            vertical-align: bottom;
+        }
 
 .card-content span {
     display: block;
