--- a/marketTrio/src/main/resources/templates/thyme/banner.html
+++ b/marketTrio/src/main/resources/templates/thyme/banner.html
@@ -58,11 +58,18 @@
         <div class="nav">
             <a href="#" th:href="@{/shPost/list}">중고거래</a>
             <a href="#" th:href="@{/auction/list}">경매</a>
-            <a href="#" th:href="@{/groupBuy/groupBuyList}">공동구매</a>
+            <a href="#" th:href="@{/groupBuy/list}">공동구매</a>
         </div>
         <div class="auth">
             <a id="loginLogoutLink" th:href="${memberSession != null} ? @{/loginAndRegister/logout.do} : @{/loginAndRegister/login.do}" th:text="${memberSession != null} ? '로그아웃' : '로그인'">로그인</a>
-            <a href="#" th:href="@{/loginAndRegister/register.do}">회원가입</a>
+            <!-- <a href="#" th:href="@{/loginAndRegister/register.do}">회원가입</a> -->
+            
+            <!-- memberSession이 존재하지 않을 때만 회원가입 링크를 보여줌 -->
+    		<a th:if="${memberSession == null}" href="#" th:href="@{/loginAndRegister/register.do}">회원가입</a>
+
+    		<!-- memberSession이 존재할 때 다른 요소를 보여줌 -->
+    		<p th:unless="${memberSession == null}">환영합니다</p>
+    		<!-- <p th:if="${memberSession != null}">환영합니다, <span th:text="${memberSession.id}">사용자</span>님!</p> -->
             <a href="#" th:href="${memberSession != null} ? @{/myPage/myInfo} : @{/loginAndRegister/login.do}">
             	<img id="profile"  th:src="@{/images/profile.png}" />
             </a>
