--- a/marketTrio/src/main/resources/templates/thyme/banner.html
+++ b/marketTrio/src/main/resources/templates/thyme/banner.html
@@ -43,6 +43,10 @@
             text-decoration: none;
             color: #333;
         }
+        .auth p {
+            margin-top: 1rem;
+          	margin-bottom: 1rem;
+      	}
         #profile {
             width: 40px;
             height: 40px;
