--- a/marketTrio/src/main/resources/templates/thyme/main.html
+++ b/marketTrio/src/main/resources/templates/thyme/main.html
@@ -47,18 +47,18 @@
         }
         .content {
             display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 20px;
+          flex-direction: column;
+          margin-left: 300px;
+          margin-right: 300px;
+          padding: 20px;
         }
         .card-group {
             display: flex;
-            flex-direction: column;
             align-items: center;
             margin-bottom: 20px;
         }
         .card {
-            background-color: #e0f7d4;
+            background-color: #AED581;
             border-radius: 50%;
             width: 100px;
             height: 100px;
@@ -66,14 +66,18 @@
             justify-content: center;
             align-items: center;
             margin: 10px;
+            min-width: 100px;
         }
         .card img {
             width: 50px;
             height: 50px;
         }
-        .card-group p {
-            text-align: center;
-            margin: 0;
+        .descript {
+           padding-top: 20px;
+           padding-left: 40px;
+        }
+        .name {
+           font-weight : bold;
         }
     </style>
 </head>
@@ -90,23 +94,38 @@
 <div class="content">
     <div class="card-group">
         <div class="card">
-            <img src="handshake.png" alt="중고거래 설명">
+            <img th:src="@{/images/shIcon.png}" alt="중고거래 설명">
         </div>
-        <p>중고거래 설명</p>
+        <div class="descript">
+           <div class="name">중고거래</div>
+           <p>사용자는 중고거래 글을 작성하거나 다른 사용자의 중고거래에 참여할 수 있습니다. <br>
+           구매를 원하는 게시물에 댓글을 작성하여 작성자와 소통할 수 있습니다. <br>
+           작성자는 소통 후 댓글을 단 사람들 중 구매자를 확정하여 물건을 판매할 수 있습니다.</p>
+        </div>
     </div>
     
     <div class="card-group">
         <div class="card">
-            <img src="auction.png" alt="경매 설명">
+            <img th:src="@{/images/aIcon.png}" alt="경매 설명">
         </div>
-        <p>경매 설명</p>
+        <div class="descript">
+           <div class="name">경매</div>
+           <p>사용자는 경매 글을 작성하거나 다른 사용자의 경매에 참여할 수 있습니다.<br>
+           입찰가를 작성하여 경매에 참여할 수 있으며, 현재 입찰가보다 낮은 가격은 신청할 수 없습니다. <br>
+           마감일이 되었을 때 최고 입찰가로 신청한 참여자가 낙찰됩니다.</p>
+        </div>
     </div>
     
     <div class="card-group">
         <div class="card">
-            <img src="group.png" alt="공동구매 설명">
+            <img th:src="@{/images/gbIcon.png}" alt="공동구매 설명">
         </div>
-        <p>공동구매 설명</p>
+        <div class="descript">
+           <div class="name">공동구매</div>
+           <p>사용자는 공동구매 글을 작성하거나 다른 사용자의 공동구매에 참여할 수 있습니다. <br>
+           게시물의 옵션과 원하는 구매 수량을 선택한 후 공동구매에 참여할 수 있습니다. <br>
+           마감일이 지나거나 잔여 수량이 모두 소진된 경우 마감됩니다.</p>
+        </div>
     </div>
 </div>
 
